✅ : Fix z-index for max-md:navbar & footer

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -135,7 +135,7 @@
 	-webkit-box-shadow: 0px -2px 15px 1px rgb(0, 0, 0);
 	box-shadow: 0px -2px 20px 2px rgb(0 0 0 / 0.1);
 
-	z-index: 100;
+	@apply z-40;
 }
 
 .tab-title {
